styles/productList.module.scss
.search-page-container {
    padding: 30px 0;
  
    .search-page-header {
      .search-result-count {
        font-size: 54px;
        line-height: 61px;
        color: #001a71;
        font-family: "GTAlpina-Medium";
        padding-bottom: 48px;
      }
  
      .search-result-text {
        font-size: 18px;
        line-height: 27px;
        color: #000000;
        font-family: "sofia-pro-regular";
  
        i {
          font-family: "sofia-pro-bold";
          color: #dc2e21;
        }
      }
  
      .showing-result-count {
        font-size: 18px;
        line-height: 27px;
        color: #3a3e41;
        font-family: "sofia-pro-regular";
        padding-top: 21px;
      }
    }
  
    .search-page-section {
      border-top: 1px solid #ccd1e3;
      margin-top: 42px;
      padding-top: 36px;
  
      .active-filter-section {
        display: flex;
        align-items: center;
  
        .text {
          font-size: 18px;
          line-height: 27px;
          font-family: "sofia-pro-regular";
          color: #001a71;
        }
  
        img {
          margin: auto 10px;
        }
  
        .selected-filter {
          display: flex;
          align-items: center;
          flex-wrap: wrap;
          font-size: 12px;
          line-height: 18px;
          font-family: "sofia-pro-regular";
          color: #001a71;
  
          div {
            background: #f8f9fb;
            border: 1px solid #001a71;
            border-radius: 10px;
            margin: 2px 2px;
            padding: 2px 8px;
  
            span {
              // margin: 2px;
              padding: 0 3px;
            }
  
            .close-btn {
              margin-left: 6px;
              cursor: pointer;
            }
          }
        }
      }
  
      .showing-filter-count {
        font-size: 18px;
        line-height: 27px;
        font-family: "sofia-pro-regular";
        color: #3a3e41;
        margin: 5px 0;
      }
  
      .filter-and-product-section {
        margin-top: 21px;
        display: flex;
  
        .filter-section {
          width: 200px;
          margin-right: 22px;
  
          .filter-container {
            padding: 6px 12px;
            border-right: 1px solid #ccd1e3;
            border-bottom: 1px solid #ccd1e3;
  
            .heading {
              margin-bottom: 4px;
              font-size: 16px;
              line-height: 24px;
              font-family: "sofia-pro-bold";
              color: #001a71;
            }
            .filter-option {
              margin: 2px 0;
  
              .filter-row {
                display: flex;
                align-items: center;
  
                input {
                  width: 16px;
                  height: 16px;
                  cursor: pointer;
                }
                div {
                  margin-left: 8px;
                  font-size: 14px;
                  line-height: 21px;
                  font-family: "sofia-pro-regular";
                  cursor: pointer;
                }
              }
            }
          }
        }
  
        .product-list-section {
          display: flex;
          align-items: center;
          flex-wrap: wrap;
  
          .product-container {
            border: 1px solid #ccd1e3;
            border-radius: 8px;
            margin: 12px 2px;
            width: 210px;
            padding: 16px;
            cursor: pointer;
  
            .product-img {
              width: 100%;
            }
  
            .category {
              font-size: 12px;
              line-height: 18px;
              font-family: "sofia-pro-bold";
              color: #001a71;
              border-radius: 10px;
              width: 79px;
              height: 22px;
              display: flex;
              justify-content: center;
              align-items: center;
              margin: 10px 0;
            }
  
            .name {
              font-size: 18px;
              line-height: 23px;
              font-family: "sofia-pro-bold";
              color: #001a71;
              margin-top: 14px;
              margin-bottom: 4px;
            }
  
            .description {
              font-size: 16px;
              line-height: 18px;
              font-family: "sofia-pro-regular";
              color: #3a3e41;
            }
          }
        }
      }
    }
  }
  .mck-Product-Listing-page {
    font-family: "sofia-pro-regular";
    .mck-hn-accordion-title-check {
      display: none;
    }
    .health-needs-categories {
      background-color: #f2f4f9;
      height: auto;
      padding: 50px 0 0;
      margin-top: 50px;
      .health-needs-categories-icons {
        ul {
          list-style: none;
          -ms-box-orient: horizontal;
          display: -webkit-box;
          display: -moz-box;
          display: -ms-flexbox;
          display: -moz-flex;
          display: -webkit-flex;
          display: flex;
          -webkit-flex-wrap: wrap;
          flex-wrap: wrap;
          li {
            font-family: "sofia-pro-regular";
            color: #001a71;
            font-size: 18px;
            text-align: center;
            padding: 0 30px 50px;
            flex: 1 1 0;
            flex-basis: auto;
            img {
              width: auto;
              margin: 0 auto 10px auto;
            }
            &:last-child {
              margin-right: 0;
            }
          }
        }
      }
    }
    .filter-title {
      color: #001a71;
      font-weight: 800;
      font-family: "sofia-pro-bold";
      font-size: 16px;
      line-height: 24px;
    }
    .mck-hn-selected-value {
      padding: 0 8px 2px;
      background: #f8f9fb;
      border: 1px solid #001a71;
      border-radius: 10px;
      margin: 0 4px;
      font-family: "sofia-pro-regular";
      font-size: 12px;
      color: #001a71;
      align-items: baseline;
      font-weight: bold;
    }
    .mck-filter-delete-icon {
      width: 10px;
    }
    .mck-hn-filter-subcat {
      padding-right: 12px;
      padding-bottom: 8px;
    }
    .mck-hn-filter-subcat:last-child {
      margin: 0;
    }
    .mck-hn-filter-category {
      padding: 0;
    }
    .mck-filter-clearall-icon {
      width: 12px;
      margin-right: 8px;
    }
    .mck-hn-mobile-accordion .tab-label {
      display: flex;
      align-items: end;
    }
  }
  
  
  .tab {
      border-bottom: 0.5px solid #ccd1e3;
    
      &-label {
        &:after {
          content: "+";
          //background-image: url('images/plus.svg');
          width: 24px;
          height: 24px;
          text-align: center;
          transition: all 1s;
          color: #001a71;
          font-size: 30px;
          display: flex;
          align-items: flex-end;
          justify-content: flex-end;
        }
      }
    
      &-content {
        max-height: 0;
        padding: 0 1em;
        transition: all 0.5s;
        ul,
        ol {
          list-style: disc;
          margin-left: 16px;
        }
        ol {
          list-style: auto;
        }
      }
      input:checked {
        + .tab-label {
          &::after {
            content: "-";
          }
        }
    
        ~ .tab-content {
          max-height: 100vh;
          padding: 12px;
          border-top: 0.5px solid #ccd1e3;
        }
      }
    }
  
  
  
  @media screen and (min-width: 1024px) {
      .tab {
        border: 0;
        &-label {
          &:after {
            display: none;
          }
        }
        input:checked {
          + .tab-label {
            &::after {
              display: none;
            }
          }
          ~ .tab-content {
            padding: 0 12px 0 0;
            border-top: 0;
          }
        }
      }
      .tab-content {
        padding: 0 0 8px;
      }
    }
    @media screen and (max-width: 1023px) {
      .mck-Product-Listing-page .mck-hn-filter-subcat {
        padding-bottom: 0;
      }
      .mck-Product-Listing-page .filter-title {
        position: relative;
        z-index: -1;
      }
    }
    
  
  

